assets/style/header.scss
$navbar-main-text-color: #87bb40;

header {
    &.full-bg {
        position: relative;
        background-size: cover;
        -webkit-transition: all 0.2s ease-out;
        -moz-transition: all 0.2s ease-out;
        transition: all 0.2s ease-out;
        z-index: 2;
        .home-carousel {
            background: none;
        }
        .navbar-default {
            background: transparent;
        }
        .dark-mask {
            opacity: 0.9;
            //filter: alpha(opacity=90);
            background: $main-background-color;
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
        }

    }
}


.nav {
    &bar {
        &-affixed-top.affix {
            .navbar-default {
                background-color: #ffffff;
            }
        }
        /* change navbar style */
        ul {
            &.nav {
                > li {
                    > a {
                        color: $navbar-main-text-color;
                        text-decoration: none;
                        border-bottom: solid 4px transparent;
                        border-top: 0 none;

                        &:hover {
                            border-top: 0 none;
                            border-bottom: 4px solid $navbar-main-text-color;
                        }
                    }
                    &.open > a, &active > a {
                        text-decoration: none !important;
                        border-top: 0 none;
                        border-bottom: 4px solid $navbar-main-text-color;
                    }
                }
            }
        }
        &-default {
            .navbar {
                &-nav {
                    > li {
                        > a {
                            &:focus, :hover {
                                //color: #FFFFFF;
                                background-color: rgba(135, 187, 64, .2);
                                border-bottom: 4px solid $navbar-main-text-color;
                            }
                        }
                    }
                }
            }
        }
    }
}


.affix-top .navbar-default .navbar-nav>li>a {
    &:focus, &:hover {
        color: #FFFFFF;
    }
}

.affix .navbar-default .navbar-nav>li>a {
    &:focus, :hover {
        color: $navbar-main-text-color;
    }
}

.navbar-default .navbar-nav> {
    .active, .open  {
        > a, > a:hover, > a:focus {
            color: #ffffff;
            background-color: rgba(135, 187, 64, .2);
            border-bottom: 4px solid $navbar-main-text-color;
        }
    }
}

.dropdown-menu {
    background-color: $navbar-main-text-color;
    border: 0 none;
}

.navbar ul.dropdown-menu li {
    border-bottom-color: #102d50;
}

.navbar ul.dropdown-menu li:last-child {
    border-bottom: 0 none;
}

.navbar ul.dropdown-menu li:hover {
    background-color: #21424e;
}

.navbar ul.dropdown-menu li a {
    color: #fff;
}

.navbar ul.dropdown-menu li a:hover {
    color: #fff;
    right: 0;
}

div#navigation.navbar-collapse.collapse ul.nav.navbar-nav.navbar-right li.dropdown a {
    font-family: 'Oswald', "Helvetica Neue", sans-serif !important;
    font-weight: normal;
}

.topbar-social {
    padding: 0;
    margin: 0;
    opacity: 1;
    line-height: $main-menu-height;
    a {
        color: $navbar-main-text-color;
    }
}

// overrides theme setting: was -15px
.navbar {
    &-nav {
        &.navbar-right {
            &:last-child {
                margin-right: -20px;
            }
        }
    }
}

nav > li > a {
    padding: 10px 15px;
}

/*****************************/
/******* XL BREAKPOINT *******/
/*****************************/

@media screen and (max-width: $xl-breakpoint) {
    .topbar-social {
        font-size: 12px;
    }
}

@media (max-width: $lg-breakpoint) {
    .topbar-social {
        display: none;
    }
    .navbar {

    }
}

